# sql-agent

./: README.md
sql_agent/: .gitignore  README.md  __main__.py  agent.py  chat_interface.py  pyproject.toml  task_manager.py
sql_agent/common/server/: __init__.py
